--- a/core/templates/cliente/list-asesoria.html
+++ b/core/templates/cliente/list-asesoria.html
@@ -86,5 +86,5 @@
     {% comment %} <script type="text/javascript" src="{% static 'core/js/cliente.js' %}"></script> {% endcomment %}
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script type="text/javascript" src="{% static 'core/js/cliente.js' %}"></script>
+    <script type="text/javascript" src="{% static 'core/js/cliente/asesoria.js' %}"></script>
 {% endblock content %}
