--- a/core/templates/cliente/new-asesoria.html
+++ b/core/templates/cliente/new-asesoria.html
@@ -98,5 +98,5 @@
   <br>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script type="text/javascript" src="{% static 'core/js/cliente.js' %}"></script>
+  <script type="text/javascript" src="{% static 'core/js/cliente/asesoria.js' %}"></script>
 {% endblock content %}
