--- a/core/templates/cliente/asesoria/detail-asesoria.html
+++ b/core/templates/cliente/asesoria/detail-asesoria.html
@@ -21,6 +21,7 @@
         <hr>
         <h5 id="fecha-inicio"></h5>
         <h5 id="fecha-termino"></h5>
+        <h5 id="descripcion"></h5>
         <h5 id="tipo-asesoria"></h5>
         <h5 id="estado-asesoria"></h5>
         <h5 id="profesional"></h5>
