--- a/core/templates/cliente/accidente/list-accidente.html
+++ b/core/templates/cliente/accidente/list-accidente.html
@@ -57,7 +57,7 @@
                 <th class="col-2">Fecha Accidente</th>
                 <th class="col-2">Descripción</th>
                 <th class="col-2">Cant. Involucrados</th>
-                <th class="col-2">Última Actualización</th>
+                <th class="col-2">Tipo Accidente</th>
                 <th class="col-4">Acciones</th>                
               </tr>
             </thead>          
