--- a/core/templates/cliente/accidente/detail-accidente.html
+++ b/core/templates/cliente/accidente/detail-accidente.html
@@ -2,7 +2,7 @@
 
 {% load bootstrap5 %}
 {% load static %}
-{% block bootstrap5_title %}No More Accidents{% endblock %}
+{% block bootstrap5_title %}No More Accidents | Detalle Accidente{% endblock %}
 
 {% block content %}
         <br>
