--- a/core/templates/cliente/accidente/new-accidente.html
+++ b/core/templates/cliente/accidente/new-accidente.html
@@ -2,7 +2,7 @@
 
 {% load bootstrap5 %}
 {% load static %}
-{% block bootstrap5_title %}No More Accidents{% endblock %}
+{% block bootstrap5_title %}No More Accidents | Nuevo Accidente{% endblock %}
 
 {% block content %}
   <br>
