--- a/core/templates/cliente/asesoria/detail-asesoria.html
+++ b/core/templates/cliente/asesoria/detail-asesoria.html
@@ -2,7 +2,7 @@
 
 {% load bootstrap5 %}
 {% load static %}
-{% block bootstrap5_title %}No More Accidents{% endblock %}
+{% block bootstrap5_title %}No More Accidents | Detalle Asesoría{% endblock %}
 
 {% block content %}
     <br>
