--- a/core/templates/cliente/asesoria/update-asesoria.html
+++ b/core/templates/cliente/asesoria/update-asesoria.html
@@ -2,7 +2,7 @@
 
 {% load bootstrap5 %}
 {% load static %}
-{% block bootstrap5_title %}No More Accidents{% endblock %}
+{% block bootstrap5_title %}No More Accidents | Actualizar solicitud Asesoría{% endblock %}
 
 {% block content %}
   <br>
