--- a/core/templates/cliente/asesoria/detail-asesoria.html
+++ b/core/templates/cliente/asesoria/detail-asesoria.html
@@ -21,15 +21,19 @@
         <hr>
         <h5 id="fecha-inicio"></h5>
         <h5 id="fecha-termino"></h5>
-        <h5 id="descripcion"></h5>
         <h5 id="tipo-asesoria"></h5>
         <h5 id="estado-asesoria"></h5>
         <h5 id="profesional"></h5>
-        <hr>
+        <br>
         <h3 style="text-align: center;">Contacto Fiscalizador</h3>
+        <hr>
         <h5 id="nombre-fiscalizador"></h5>
         <h5 id="numero-fiscalizador"></h5>
         <h5 id="email-fiscalizador"></h5>
+        <br>
+        <h3 style="text-align: center;">Informe situación</h3>
+        <hr>
+        <h5 id="descripcion"></h5>
     </div> 
     <br>
     <br>
