--- a/core/templates/cliente/asesoria/update-asesoria.html
+++ b/core/templates/cliente/asesoria/update-asesoria.html
@@ -34,7 +34,7 @@
             <li>El email no es correcto.</li>
         </ul> -->
       </div>
-      <br>
+      {% comment %} <br>
       <div class="form-group">
         <label>Informe situación *</label>
         <br>
@@ -42,7 +42,7 @@
         <div class="input-group">
           <textarea id="descripcion_update" class="form-control" name="descripcion"></textarea>
         </div>
-      </div>
+      </div> {% endcomment %}
       <br>
         <h3>Contacto Fiscalizador</h3>
         <hr>
