--- a/core/templates/cliente/asesoria/new-asesoria.html
+++ b/core/templates/cliente/asesoria/new-asesoria.html
@@ -32,7 +32,7 @@
           <li>El email no es correcto.</li>
       </ul> -->
     </div>
-    <br>
+    {% comment %} <br>
     <div class="form-group">
       <label>Informe situación *</label>
       <br>
@@ -40,7 +40,7 @@
       <div class="input-group">
         <textarea id="descripcion" class="form-control" name="descripcion"></textarea>
       </div>
-    </div>
+    </div> {% endcomment %}
     <br>
       <h3>Contacto Fiscalizador</h3>
       <hr>
