--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -31,16 +31,16 @@
             {% comment %} {% if perms.asesora.add_accidente %} {% endcomment %}
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'accidente-list' %}" style="color:#fff;">Accidentes</a>
-                </li>
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.view_visita %} {% endcomment %}
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#" style="color:#fff;">Mis Visitas</a>
-                </li>
+                </li>                
             {% comment %} {% endif %} {% endcomment %}
             {% comment %} {% if perms.asesora.view_capacitacion %}        {% endcomment %}
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'capacitacion-list' %}" style="color:#fff;">Capacitaciones</a>
+                </li>
+            {% comment %} {% endif %} {% endcomment %}
+            {% comment %} {% if perms.asesora.view_visita %} {% endcomment %}
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'visita-list' %}" style="color:#fff;">Visitas</a>
                 </li>
             {% comment %} {% endif %} {% endcomment %}
             {% comment %} {% if perms.asesora.view_factura %}        {% endcomment %}
@@ -68,13 +68,16 @@
     <ul class="navbar-nav">
         <li class="nav-item">            
             {% if user.is_authenticated %}
+            {% comment %} {% if usuario.is_authenticated %} {% endcomment %}
                 <a id="logout-button" class="nav-link" href="{% url 'logout' %}" style="color:#fff;">Salir</a>
             {% else %}
                 <a id="login-button" class="nav-link" href="{% url 'login' %}" style="color:#fff;">Login</a>
             {% endif %}            
         </li>
+        {% comment %} {% if usuario.is_authenticated %} {% endcomment %}
         {% if user.is_authenticated %}
             <span class="nav-link text-light mx-2">Hola, {{ user.username }}!</span>
+            {% comment %} <span class="nav-link text-light mx-2">Hola, {{ usuario.username }}!</span> {% endcomment %}
         {% endif %}
     </ul>
     </div>
