--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -32,7 +32,7 @@
                 <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
             </form>
             <p>
-                Ha olvidado su clave? Puede restaurarla <a href="">aqui</a>
+                Ha olvidado su clave? Puede restaurarla <a href="{% url 'password_reset' %}">aqui</a>
             </p>
         </div>
         </div>
