--- a/core/templates/cliente/accidente/detail-accidente.html
+++ b/core/templates/cliente/accidente/detail-accidente.html
@@ -30,11 +30,11 @@
       <br><br><br>
       <div class="row">
         <div class="container col-md-4" style="text-align: left;">
-          <a href="" class="btn btn-secondary col-md-8"><img src="{% static 'core/img/icons/previous.png' %}" alt="" width="38px" height="38px">Volver</a>
+          <a href="{% url 'accidente-list' %}" class="btn btn-secondary col-md-8"><img src="{% static 'core/img/icons/previous.png' %}" alt="" width="38px" height="38px">Volver</a>
         </div>
-        <div class="container col-md-4" style="text-align: center;">
+        {% comment %} <div class="container col-md-4" style="text-align: center;">
           <a href="" class="btn btn-warning col-md-12"><img src="{% static 'core/img/icons/edit.png' %}" alt="" width="38px" height="38px">Modificar</a>
-        </div>
+        </div> {% endcomment %}
         <div class="container col-md-4">
           <!-- <button>Editar</button> -->
         </div>
