--- a/core/templates/cliente/accidente/new-accidente.html
+++ b/core/templates/cliente/accidente/new-accidente.html
@@ -68,7 +68,7 @@
     <br><br><br>
     <div class="row">
       <div class="container col-md-4" style="text-align: left;">
-        <a href="#" class="btn btn-secondary col-md-8"><img src="{% static 'core/img/icons/previous.png' %}" alt="" width="38px" height="38px">Volver</a>
+        <a href="{% url 'accidente-list' %}" class="btn btn-secondary col-md-8"><img src="{% static 'core/img/icons/previous.png' %}" alt="" width="38px" height="38px">Volver</a>
       </div>
       <!-- <div class="container col-md-4" style="text-align: center;">
         <a href="update-asesoria.html" class="btn btn-warning col-md-12"><img src="../../assets/img/icons/edit.png" alt="">Editar Solicitud</a>
