--- a/core/templates/cliente/visita/list-visita.html
+++ b/core/templates/cliente/visita/list-visita.html
@@ -19,7 +19,7 @@
     <div class="container" style="text-align:center;">      
       <div class="row">
         <div class="col-md-12" style="text-align:center;">            
-            <a href="" class="btn btn-primary col-md-3"><img src="../../assets/img/icons/document.png" alt="">Formulario Visita</a>
+            <a href="{% url 'formulario-visita' %}" class="btn btn-primary col-md-3"><img src="../../assets/img/icons/document.png" alt="">Formulario Visita</a>
         </div>
       </div>
       <br>
