--- a/core/templates/cliente/asesoria/detail-asesoria.html
+++ b/core/templates/cliente/asesoria/detail-asesoria.html
@@ -41,10 +41,10 @@
       <br><br><br>
       <div class="row">
         <div class="container col-md-4" style="text-align: left;">
-          <a href="" class="btn btn-secondary col-md-8"><img src="{% static 'core/img/icons/previous.png' %}" alt="" width="38px" height="38px">Volver</a>
+          <a href="{% url 'asesoria-list' %}" class="btn btn-secondary col-md-8"><img src="{% static 'core/img/icons/previous.png' %}" alt="" width="38px" height="38px">Volver</a>
         </div>
         <div class="container col-md-4" style="text-align: center;">
-          <a href="" class="btn btn-warning col-md-12"><img src="{% static 'core/img/icons/edit.png' %}" alt="" width="38px" height="38px">Editar Solicitud</a>
+          {% comment %} <a href="{% url 'asesoria-update' asesoria.id %}" class="btn btn-warning col-md-12"><img src="{% static 'core/img/icons/edit.png' %}" alt="" width="38px" height="38px">Editar Solicitud</a> {% endcomment %}
         </div>
         <div class="container col-md-4">
           <!-- <button>Editar</button> -->
