--- a/core/templates/cliente/contrato/detail-contrato.html
+++ b/core/templates/cliente/contrato/detail-contrato.html
@@ -33,9 +33,9 @@
     <div class="container col-md-8">
       <br><br><br>
       <div class="row">
-        <!-- <div class="container col-md-4" style="text-align: left;">
-          <a href="list-accidente.html" class="btn btn-secondary col-md-8"><img src="../../assets/img/icons/previous.png" alt="" width="38px" height="38px">Volver</a>
-        </div> -->
+        <div class="container col-md-4" style="text-align: left;">
+          <a href="{% url 'contrato-list' %}" class="btn btn-secondary col-md-8"><img src="{% static 'core/img/icons/previous.png' %}" alt="" width="38px" height="38px">Volver</a>
+        </div> 
         <!-- <div class="container col-md-4" style="text-align: center;">
           <a href="update-accidente.html" class="btn btn-warning col-md-12"><img src="../../assets/img/icons/edit.png" alt="" width="38px" height="38px">Modificar</a>
         </div> -->
