--- a/core/templates/cliente/accidente/list-accidente.html
+++ b/core/templates/cliente/accidente/list-accidente.html
@@ -5,7 +5,7 @@
 {% block bootstrap5_title %}No More Accidents | Accidentes{% endblock %}
 
 {% block content %}
-  <div class="bg-white">
+  <div class="container" style="text-align:center">
     <br>
     <br>
     <div class="container" style="text-align:center">
@@ -27,7 +27,6 @@
     </div>
     <br>
     <br>
-
     <div class="container col-12" style="text-align: center;">
       <div class="table table-sm">
       <form method="GET" id="filter-form">
