--- a/core/templates/cliente/accidente/new-accidente.html
+++ b/core/templates/cliente/accidente/new-accidente.html
@@ -46,6 +46,9 @@
     </div>
     <br>
     <div class="form-group">
+      <label>Tipo de Accidente *</label>
+      <br>
+      <br>
       <select id="comboTipoAccidente" style="text-align: center;" name="tipo_accidente" onchange="combo(this, 'tipoaccidente')" class="form-control">
         {% comment %} Por caída, Por exposición o contacto, Por sobreesfuerzo o golpes, Por movimientos repetitivos {% endcomment %}
         <option value="1">Por caída</option>
