--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -3,6 +3,8 @@
 {% load bootstrap5 %}
 {% load static %}
 
+{% load custom_tags %}
+
 {% block bootstrap5_content %}
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -17,73 +19,46 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <img src="{% static 'core/img/logo.texto.blanco.png' %}" class="rounded mx-auto d-block img-fluid" alt="..." width="100px">
-        {% comment %} <a class="navbar-brand" href="#" style="color:#fff;">No More Accidents</a>       {% endcomment %}
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav " aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav " aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border-color: white;">
+            <span class="navbar-toggler-icon" style="color: white;"></span>
+        </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav" style="color:#fff;">
+        <ul class="navbar-nav col-12 col-md-10" style="color:#fff;">
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/" style="color:#fff;">Inicio</a>
             </li>
-            {% comment %} CLIENTE {% endcomment %}
-            {% comment %} {%if perms.asesora.add_asesoria %} {% endcomment %}
+            {% if request.user|has_group:"Cliente" %} 
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'asesoria-list' %}" style="color:#fff;">Asesorías</a>
-                </li>
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.add_accidente %} {% endcomment %}
+                </li>                                   
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'accidente-list' %}" style="color:#fff;">Accidentes</a>
                 </li>                
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.view_capacitacion %}        {% endcomment %}
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'capacitacion-list' %}" style="color:#fff;">Capacitaciones</a>
                 </li>
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.view_visita %} {% endcomment %}
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'visita-list' %}" style="color:#fff;">Visitas</a>
                 </li>
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.view_factura %}        {% endcomment %}
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'factura-list' %}" style="color:#fff;">Facturas</a>
                 </li>
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.view_contrato %} {% endcomment %}
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'contrato-list' %}" style="color:#fff;">Contrato</a>
                 </li>
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.change_visita %} {% endcomment %}
-                {% comment %} <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#" style="color:#fff;">Visita Profesional</a>
-                </li> {% endcomment %}
-            {% comment %} {% endif %} {% endcomment %}
-            {% comment %} {% if perms.asesora.change_capacitacion %} {% endcomment %}
-                {% comment %} <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#" style="color:#fff;">Capacitación Profesional</a>
-                </li> {% endcomment %}
-            {% comment %} {% endif %} {% endcomment %}
+            {% endif %}
         </ul>
-    
-    {% comment %} <ul class="navbar-nav ml-auto mr-0"> {% endcomment %}
     <ul class="navbar-nav ml-auto mr-0">
         <li class="nav-item">            
             {% if user.is_authenticated %}
-            {% comment %} {% if usuario.is_authenticated %} {% endcomment %}
                 <a id="logout-button" class="nav-link" href="{% url 'logout' %}" style="color:#fff;">Salir</a>
             {% else %}
                 <a id="login-button" class="nav-link" href="{% url 'login' %}" style="color:#fff;">Login</a>
             {% endif %}            
         </li>
-        {% comment %} {% if usuario.is_authenticated %} {% endcomment %}
         {% if user.is_authenticated %}
             <span class="nav-link text-light mx-2">Hola, {{ user.username }}!</span>
-            {% comment %} <span class="nav-link text-light mx-2">Hola, {{ usuario.username }}!</span> {% endcomment %}
         {% endif %}
     </ul>
     </div>
@@ -110,6 +85,4 @@
 {% comment %} </div> {% endcomment %}
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    {% comment %} <script type="text/javascript" src="{% static 'core/js/logout.js' %}"></script>
-    <script type="text/javascript" src="{% static 'core/js/login3.js' %}"></script> {% endcomment %}
 {% endblock %}
