--- a/core/templates/cliente/asesoria/update-asesoria.html
+++ b/core/templates/cliente/asesoria/update-asesoria.html
@@ -75,7 +75,7 @@
         <br>
         <div class="text-center">
           <button type="submit" id="btnUpdateAsesoria" class="btn btn-outline-primary btn-primary text-light mt-3"><img src="{% static 'core/img/icons/upload.png' %}" alt="" width="25px" height="25px">Actualizar Solicitud</button>
-          <button type="reset" class="btn btn-outline-secondary btn-secondary text-light mt-3"><img src="{% static 'core/img/icons/clean.png' %}" alt="" width="25px" height="25px"> Restablecer</button>
+          {% comment %} <button type="reset" class="btn btn-outline-secondary btn-secondary text-light mt-3"><img src="{% static 'core/img/icons/clean.png' %}" alt="" width="25px" height="25px"> Restablecer</button> {% endcomment %}
         </div>
     </form>
   </div>
